[package]
name = "unit_convert"
version = "0.1.0"
authors = ["lladhibhutall <debjyoti.biswas@outlook.com>"]
edition = "2020"
description = "Easy library for unit conversions"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
